src/objects/MB_Device_Details__c.object
<CustomObject>
    <fields>
        <fullName>Make__c</fullName>
        <description>Device company name</description>
        <label>Make</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>Device model name</description>
        <label>Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_URL__c</fullName>
        <description>URL of device image</description>
        <label>Photo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>Device version name</description>
        <label>Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Device Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Device Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>